examples/type_system/failing/09_compile_typed_call_return_mismatch.flx
fn make_label() -> String {
    "label"
}

let n: Int = make_label()
